# wechat-pay-sdk

./: .gitignore  Cargo.toml
src/: client.rs  crypto.rs  lib.rs
src/error/: code.rs  external.rs  mod.rs
src/sdk/: cert.rs  media.rs  mod.rs
src/sdk/basic/: mod.rs
src/sdk/basic/app/: mod.rs
src/sdk/basic/combine/: mod.rs
src/sdk/basic/h5/: mod.rs  order.rs
src/sdk/basic/jsapi/: mod.rs  order.rs  refund.rs
src/sdk/basic/mini_app/: mod.rs
src/sdk/basic/native/: mod.rs
src/sdk/common/: amount.rs  discount.rs  goods.rs  mod.rs  order.rs  payer.rs  scene.rs  settle.rs
src/sdk/fund/: mod.rs  transfer.rs
src/sdk/partner/ecommerce/: application.rs
src/webhook/: mod.rs  refund.rs  transaction.rs
