[package]
name = "wechat-pay-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.1"
base64 = "0.21.0"
http = "0.2.9"
openssl = "0.10.45"
rand = "0.8.5"
redis = { version = "0.22.3", features = ["tokio-comp"] }
reqwest = { version = "0.11", features = ["json"] }
rsa = { version = "0.8.1", features = ["sha2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
serde_urlencoded = "0.7.1"
sha2 = "0.10.6"
tokio = { version = "1.24.2", features = ["full"] }
url = "2.3.1"
