[package]
name = "wechat-pay-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.0"
openssl = "0.10.64"
rand = "0.8.5"
redis = { version = "0.25.2", features = ["tokio-comp"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
rsa = { version = "0.9.6", features = ["sha2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
serde_urlencoded = "0.7.1"
tokio = { version = "1.36.0", features = ["full"] }
url = "2.5.0"
hex = "0.4.3"
